<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="MissingPrefix"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <com.hairbyprogress.custom.ColorChangingBackgroundView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/back"
                />
            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/vp"
                />


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center|bottom"
                android:id="@+id/dot_holder"
                >

            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/shop_but"
                android:layout_gravity="center"
                android:clickable="true"
                android:layout_marginTop="20dp"
                style="?attr/buttonStyleSmall"
                android:background="@drawable/curve_brown"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                >

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_now"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    fontPath = "fonts/NirmalaB.ttf"
                    android:layout_marginRight="5dp"
                    />
                <ImageView
                    android:alpha=".8"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_cart"
                    android:tint="@color/white"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:id="@+id/login_but"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    fontPath = "fonts/NirmalaB.ttf"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_weight="1"
                    />
                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black"
                    android:alpha=".3"
                    />
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/signup_but"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/signup"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    fontPath = "fonts/NirmalaB.ttf"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</FrameLayout>
